--- a/src/SCSS/variables.scss
+++ b/src/SCSS/variables.scss
@@ -8,6 +8,11 @@
 /* font-family: 'Raleway', sans-serif; */
 @import "~bootstrap/scss/bootstrap";
 
+body, header{
+    background-image: linear-gradient(to right, #f78ca0 0%, #f9748f 19%, #fd868c 60%, #fe9a8b 100%);
+}
+
+
 /* VARIABLES */
 $fuentebody: 'Raleway', sans-serif;
 $fotoAltura: 200%;
