--- a/src/SCSS/productos.scss
+++ b/src/SCSS/productos.scss
@@ -12,15 +12,12 @@
         .productosItems{
             @include flexbox_style(center, center, wrap,column);
             align-items: center;
-            border:5px #C6C6C6 solid;
-            background-color: #fff;
-            border-radius: 20%;
             padding:15px 0;
             img{
                 width: 100%;
             }
             .cajaProducto{
-                width: 100%;
+                width: 70%;
                 @include flexbox_style(center, stretch,wrap,column);
                 .cajaBotones{
                     @include flexbox_style(space-evenly, center,wrap,row);
@@ -52,6 +49,9 @@
                 }
             }
         }
+    }
+    .contenedorDetalles{
+        @include flexbox_style(center, center, wrap,row);
     } 
 
 }
