--- a/src/SCSS/styles.scss
+++ b/src/SCSS/styles.scss
@@ -5,3 +5,4 @@
 @import '../Componentes/Item/Item.scss';
 @import '../Componentes/ItemCount/ItemCount.scss';
 @import '../Componentes/ItemDetail/ItemDetail.scss';
+@import '../Componentes/Loading/Loading.scss'
