Desafio Contador + Fix Find ItemDetailContainer

--- a/src/SCSS/styles.scss
+++ b/src/SCSS/styles.scss
@@ -5,4 +5,5 @@
 @import '../Componentes/Item/Item.scss';
 @import '../Componentes/ItemCount/ItemCount.scss';
 @import '../Componentes/ItemDetail/ItemDetail.scss';
-@import '../Componentes/Loading/Loading.scss'
+@import '../Componentes/Loading/Loading.scss';
+@import '../Componentes/FinalizaCompra/FinalizaCompra.scss'
