--- a/src/SCSS/styles.scss
+++ b/src/SCSS/styles.scss
@@ -6,4 +6,5 @@
 @import '../Componentes/ItemCount/ItemCount.scss';
 @import '../Componentes/ItemDetail/ItemDetail.scss';
 @import '../Componentes/Loading/Loading.scss';
-@import '../Componentes/FinalizaCompra/FinalizaCompra.scss'
+@import '../Componentes/FinalizaCompra/FinalizaCompra.scss';
+@import '../Componentes/Cart/Cart.scss'
